Refactor and enhance folder path updates and database checks
Improved the handling of folder path changes by introducing new checks for drive and folder serial numbers. Enhanced database accessibility validation with a utility function. Minor text corrections and cleanup across multiple files.